update text content and design

--- a/sections/page-about-us.liquid
+++ b/sections/page-about-us.liquid
@@ -121,13 +121,7 @@
       <div class="db-row">
         <div class="db-col">
           <div class="db-inner-row">
-            Welcome to BEAT 96.9, a once great independent radio station, struggling to stay alive in the world of the undead. This new animated show follows the lives of the station’s re-animated crew as they manage their post-apocalyptic lives. 
-          </div>
-          <div class="db-inner-row">
-            Welcome to BEAT 96.9, a once great independent radio station, struggling to stay alive in the world of the undead. This new animated show follows the lives of the station’s re-animated crew as they manage their post-apocalyptic lives. The show’s setting will allow for a broad array of colorful characters, transient guests, and somewhat live performances from the new world’s up-and-coming bands trying to bring their music and careers to life.
-          </div>
-          <div class="db-inner-row">
-            Welcome to BEAT 96.9, a once great independent radio station, struggling to stay alive in the world of the undead. This new animated show follows the lives of the station’s re-animated crew as they manage their post-apocalyptic lives. 
+            Welcome to BEAT 96.9, a once great independent radio station struggling to stay alive in the world of the undead. This new animated world follows the lives of the stations’ reimagined crew as they manage their post-apocalyptic lives.
           </div>
         </div>
         <div class="db-col"
@@ -271,7 +265,7 @@
     </div>
   </section>
 
- 
+  
   <section class="db-section db-section--about-us-mb-slider"
     v-if="isMobile">
     <div class="db-container">
