--- a/assets/theme.css
+++ b/assets/theme.css
@@ -2670,71 +2670,24 @@ ul, ol {
   }
 }
 .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(1) {
-  color: #CAC7D0;
-  text-align: right;
-  font-family: var(--secondaryFontFamily);
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5em;
-  letter-spacing: -0.64px;
-  max-width: 351px;
-}
-@media only screen and (max-width: 1080px) {
-  .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(1) {
-    text-align: center;
-    order: 2;
-  }
-}
-@media only screen and (max-width: 480px) {
-  .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(1) {
-    text-align: left;
-    order: 0;
-    max-width: 350px;
-    min-width: 350px;
-    width: 100%;
-  }
-}
-.db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(2) {
-  color: #CAC7D0;
+  color: #FFF;
   text-align: center;
-  font-family: var(--secondaryFontFamily);
-  font-size: 16px;
+  font-family: var(--primaryFontFamily);
+  font-size: 32px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 1.5em;
-  letter-spacing: -0.64px;
-  max-width: 460px;
+  font-weight: 500;
+  line-height: 150%;
+  max-width: 866px;
 }
-@media only screen and (max-width: 480px) {
-  .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(2) {
-    max-width: 350px;
-    min-width: 350px;
-    width: 100%;
-    text-align: left;
-  }
-}
-.db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(3) {
-  color: #CAC7D0;
-  font-family: var(--secondaryFontFamily);
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5em;
-  letter-spacing: -0.64px;
-  max-width: 350px;
-}
-@media only screen and (max-width: 1080px) {
-  .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(3) {
-    text-align: center;
+@media only screen and (max-width: 768px) {
+  .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(1) {
+    font-size: 20px;
+    max-width: 500px;
   }
 }
 @media only screen and (max-width: 480px) {
-  .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(3) {
-    text-align: left;
-    max-width: 350px;
-    min-width: 350px;
-    width: 100%;
+  .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(1) {
+    font-size: 16px;
   }
 }
 .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) {
