--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -248,77 +248,80 @@
                     overflow: hidden;
                     cursor: grab;
 
+                    // .db-widget-row {
+                    //   display: flex;
+                    //   justify-content: space-between;
+                    //   align-items: flex-start;
+                    //   gap: 0 5px;
+
+                    //   @media only screen and (max-width: 1440px) {
+                    //     justify-content: flex-end;
+                    //   }
+
+                    //   @media only screen and (max-width: 1366px) {
+                    //     flex-direction: column;
+                    //     align-items: flex-end;
+                    //   }
+
+                    //   @media only screen and (max-width: 1080px) {
+                    //     flex-direction: row;
+                    //     justify-content: center;
+                    //     align-items: flex-start;
+                    //   }
+
+                    //   @media only screen and (max-width: 768px) {
+                    //     flex-direction: column;
+                    //     justify-content: flex-start;
+                    //     align-items: center;
+                    //   }
+
+                    //   .db-widget-col {
+                    //     .db-widget-list {
+                    //       display: flex;
+                    //       flex-direction: column;
+                    //       align-content: flex-start;
+                    //       gap: 30px 0;
+                    //       width: 100%;
+                    //       height: 100%;
+                    //       padding: 20px 10px;
+
+                    //       .db-widget-item {
+                    //         opacity: 0;
+                    //         scale: 1.1;
+                    //         width: 100%;
+                    //         min-height: 50px;
+                    //       }
+                    //     }
+
+                    //     &:nth-of-type(1) {
+                    //       max-width: 425px;
+                    //       min-width: 425px;
+
+                    //       @media only screen and (max-width: 480px) {
+                    //         max-width: 350px;
+                    //         min-width: 350px;
+                    //       }
+                    //     }
+
+                    //     &:nth-of-type(2) {
+                    //       max-width: 280px;
+                    //       min-width: 280px;
+
+                    //       @media only screen and (max-width: 1366px) {
+                    //         max-width: 425px;
+                    //       }
+
+                    //       @media only screen and (max-width: 480px) {
+                    //         max-width: 350px;
+                    //         min-width: 350px;
+                    //       }
+                    //     }
+                    //   }
+                    // }
                     .db-widget-row {
-                      display: flex;
-                      justify-content: space-between;
-                      align-items: flex-start;
-                      gap: 0 5px;
 
-                      @media only screen and (max-width: 1440px) {
-                        justify-content: flex-end;
-                      }
-
-                      @media only screen and (max-width: 1366px) {
-                        flex-direction: column;
-                        align-items: flex-end;
-                      }
-
-                      @media only screen and (max-width: 1080px) {
-                        flex-direction: row;
-                        justify-content: center;
-                        align-items: flex-start;
-                      }
-
-                      @media only screen and (max-width: 768px) {
-                        flex-direction: column;
-                        justify-content: flex-start;
-                        align-items: center;
-                      }
-
-                      .db-widget-col {
-                        .db-widget-list {
-                          display: flex;
-                          flex-direction: column;
-                          align-content: flex-start;
-                          gap: 30px 0;
-                          width: 100%;
-                          height: 100%;
-                          padding: 20px 10px;
-
-                          .db-widget-item {
-                            opacity: 0;
-                            scale: 1.1;
-                            width: 100%;
-                            min-height: 50px;
-                          }
-                        }
-
-                        &:nth-of-type(1) {
-                          max-width: 425px;
-                          min-width: 425px;
-
-                          @media only screen and (max-width: 480px) {
-                            max-width: 350px;
-                            min-width: 350px;
-                          }
-                        }
-
-                        &:nth-of-type(2) {
-                          max-width: 280px;
-                          min-width: 280px;
-
-                          @media only screen and (max-width: 1366px) {
-                            max-width: 425px;
-                          }
-
-                          @media only screen and (max-width: 480px) {
-                            max-width: 350px;
-                            min-width: 350px;
-                          }
-                        }
-                      }
                     }
-
+                    
                     &.--dragging {
                       cursor: grabbing;
                     }
