--- a/styles/db-theme/_widget.scss
+++ b/styles/db-theme/_widget.scss
@@ -10,16 +10,30 @@
 
   &.--year-2069 {
     .db-widget-box {
+      // position: relative;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: flex-start;
+      // align-items: flex-end;
+      // background-image: url('DB_Widget01_bg-v02-814x770.jpg');
+      // background-position: center;
+      // background-repeat: no-repeat;
+      // background-size: cover;
+      // height: 385px;
+      // padding: 25px 37px;
+      // scale: 1.0;
+      // border-radius: 30px;
+
       position: relative;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-end;
-      background-image: url('DB_Widget01_bg-v02-814x770.jpg');
+      background-image: url('DB_Widget01_bg-v02-1312x886.jpg');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      height: 385px;
+      height: 443px;
       padding: 25px 37px;
       scale: 1.0;
       border-radius: 30px;
