--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -130,6 +130,7 @@
                   <div class="db-widget-col">
                     <div class="db-widget-list">
                       {% render 'widget--year-2069' %}
+                      {% render 'widget--roadmap' %}
                     </div>
                   </div>
                 </div>
