--- a/styles/db-theme/_widget.scss
+++ b/styles/db-theme/_widget.scss
@@ -30,17 +30,33 @@
       justify-content: flex-start;
       align-items: flex-end;
       background-image: url('DB_Widget01_bg-v02-1312x886.jpg');
-      background-position: center;
+      background-position: bottom;
       background-repeat: no-repeat;
       background-size: cover;
       height: 443px;
-      padding: 25px 37px;
+      padding: 43px 48px 28px 48px;
       scale: 1.0;
       border-radius: 30px;
 
+      @media only screen and (max-width: 1440px) {
+        background-position: left;
+      }
+
+      @media only screen and (max-width: 1080px) {
+        background-position: bottom;
+      }
+
       @media only screen and (max-width: 768px) {
+        background-position: left;
+      }
+
+      @media only screen and (max-width: 480px) {
         padding: 25px;
       }
+
+      // @media only screen and (max-width: 768px) {
+      //   padding: 25px;
+      // }
 
       &::before {
         content: '';
@@ -65,16 +81,30 @@
 
         span {
           &:nth-of-type(1) {
-            font-family: $primaryFontFamily;
-            font-size: 27px;
-            font-style: normal;
-            font-weight: 700;
-            text-align: center;
+            // font-family: $primaryFontFamily;
+            // font-size: 27px;
+            // font-style: normal;
+            // font-weight: 700;
+            // text-align: center;
+            // text-orientation: upright;
+            // writing-mode: vertical-lr;
+            // line-height: 1.1em;
+            // letter-spacing: -13px;
+            // display: block;
+            // background: linear-gradient(180deg, #A9A4E5 0%, rgba(169, 164, 229, 0.00) 109.26%);
+            // background-clip: text;
+            // -webkit-background-clip: text;
+            // -webkit-text-fill-color: transparent;
+
             text-orientation: upright;
             writing-mode: vertical-lr;
-            line-height: 1.1em;
+            text-align: center;
+            font-family: $primaryFontFamily;
+            font-size: 31px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 100%;
             letter-spacing: -13px;
-            display: block;
             background: linear-gradient(180deg, #A9A4E5 0%, rgba(169, 164, 229, 0.00) 109.26%);
             background-clip: text;
             -webkit-background-clip: text;
@@ -82,15 +112,28 @@
           }
 
           &:nth-of-type(2) {
+            // font-family: $primaryFontFamily;
+            // font-size: 128px;
+            // font-style: normal;
+            // font-weight: 600;
+            // text-align: right;
+            // text-shadow: 1.674121379852295px 1.674121379852295px 12.55591106414795px rgba(0, 0, 0, 0.15);
+            // line-height: 0.9em;
+            // letter-spacing: -5.12px;
+            // display: block;
+            // background: linear-gradient(180deg, #C0B7FF 5.47%, rgba(185, 200, 255, 0.30) 63.11%, rgba(181, 210, 255, 0.00) 95.31%);
+            // background-clip: text;
+            // -webkit-background-clip: text;
+            // -webkit-text-fill-color: transparent;
+
+            text-align: right;
+            text-shadow: 1.9270234107971191px 1.9270234107971191px 14.452675819396973px rgba(0, 0, 0, 0.15);
             font-family: $primaryFontFamily;
-            font-size: 128px;
+            font-size: 147px;
             font-style: normal;
             font-weight: 600;
-            text-align: right;
-            text-shadow: 1.674121379852295px 1.674121379852295px 12.55591106414795px rgba(0, 0, 0, 0.15);
-            line-height: 0.9em;
-            letter-spacing: -5.12px;
-            display: block;
+            line-height: 100%; /* 147px */
+            letter-spacing: -5.88px;
             background: linear-gradient(180deg, #C0B7FF 5.47%, rgba(185, 200, 255, 0.30) 63.11%, rgba(181, 210, 255, 0.00) 95.31%);
             background-clip: text;
             -webkit-background-clip: text;
@@ -104,40 +147,68 @@
       }
 
       p {
+        // color: rgba(255, 255, 255, 0.80);
+        // font-family: $primaryFontFamily;
+        // font-size: 36px;
+        // font-style: normal;
+        // font-weight: 700;
+        // text-align: right;
+        // line-height: 1.1em;
+        // letter-spacing: -1.08px;
+        // max-width: 130px;
+        // width: 100%;
+
         color: rgba(255, 255, 255, 0.80);
+        text-align: right;
         font-family: $primaryFontFamily;
-        font-size: 36px;
+        font-size: 41px;
         font-style: normal;
         font-weight: 700;
-        text-align: right;
-        line-height: 1.1em;
-        letter-spacing: -1.08px;
-        max-width: 130px;
+        line-height: 100%; /* 41px */
+        letter-spacing: -1.23px;
+        max-width: 183px;
         width: 100%;
 
-        @media only screen and (max-width: 768px) {
-          font-size: 30px;
-        }
+        // @media only screen and (max-width: 768px) {
+        //   font-size: 30px;
+        // }
       }
 
       .db-btn--explore-the-world {
+        // display: block;
+        // background-color: #0C0720;
+        // width: max-content;
+        // margin: auto 0 0;
+        // padding: 12px 32px;
+        // border-radius: 50px;
+
         display: block;
         background-color: #0C0720;
         width: max-content;
         margin: auto 0 0;
-        padding: 12px 32px;
-        border-radius: 50px;
+        padding: 13.813px 36.834px;
+        border-radius: 43.74px;
+        align-self: center;
 
         .db-btn-wrap {
           .db-btn-label {
-            color: $whiteColor;
+            // color: $whiteColor;
+            // font-family: $primaryFontFamily;
+            // font-size: 14px;
+            // font-style: normal;
+            // font-weight: 600;
+            // line-height: 1.1em;
+            // letter-spacing: -0.56px;
+            // display: block;
+
+            display: block;
+            color: #FFF;
             font-family: $primaryFontFamily;
-            font-size: 14px;
+            font-size: 16.115px;
             font-style: normal;
             font-weight: 600;
-            line-height: 1.1em;
-            letter-spacing: -0.56px;
-            display: block;
+            line-height: 100%; /* 16.115px */
+            letter-spacing: -0.645px;
             transition:
               color 200ms ease-in-out 0ms;
           }
@@ -353,6 +424,20 @@
 
   &.--roadmap {
     .db-widget-box {
+      // display: block;
+      // background-image: url('DB_Widget05_bg-v01-860x480.jpg');
+      // background-position: center;
+      // background-repeat: no-repeat;
+      // background-color: transparent;
+      // background-size: cover;
+      // box-shadow: unset;
+      // width: 100%;
+      // height: 195px;
+      // padding: 20px;
+      // scale: 1.0;
+      // border: none;
+      // border-radius: 30px;
+
       display: block;
       background-image: url('DB_Widget05_bg-v01-860x480.jpg');
       background-position: center;
@@ -361,11 +446,14 @@
       background-size: cover;
       box-shadow: unset;
       width: 100%;
-      height: 195px;
-      padding: 20px;
+      padding: 64px 57px 83px 57px;
       scale: 1.0;
       border: none;
       border-radius: 30px;
+
+      @media only screen and (max-width: 480px) {
+        padding: 38px 34px 38px 34px;
+      }
 
       &::before {
         content: '';
@@ -382,49 +470,59 @@
           all 200ms ease-in-out 0ms;
       }
 
-      h5 {
-        // font-family: $primaryFontFamily;
-        // font-size: 88px;
-        // font-style: normal;
-        // font-weight: 600;
-        // text-align: center;
-        // text-shadow: 1.674121379852295px 1.674121379852295px 12.55591106414795px rgba(0, 0, 0, 0.15);
-        // line-height: 1em;
-        // letter-spacing: -3.52px;
-        position: relative;
-        z-index: 10;
-        text-align: right;
-        text-shadow: 1.7687276601791382px 1.7687276601791382px 13.265458106994629px rgba(0, 0, 0, 0.15);
-        font-family: $primaryFontFamily;
-        font-size: 92.973px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 100%; /* 92.973px */
-        letter-spacing: -3.719px;
-        display: block;
-        // background: linear-gradient(180deg, #C0B7FF 5.47%, rgba(185, 200, 255, 0.30) 57.21%, rgba(181, 210, 255, 0.00) 89.93%);
-        // background-clip: text;
-        // -webkit-background-clip: text;
-        // -webkit-text-fill-color: transparent;
-        background: linear-gradient(180deg, #C0B7FF 5.47%, rgba(185, 200, 255, 0.30) 57.21%, rgba(181, 210, 255, 0.00) 89.93%);
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        margin: 0 auto 29px;
+      // h5 {
+      //   font-family: $primaryFontFamily;
+      //   font-size: 88px;
+      //   font-style: normal;
+      //   font-weight: 600;
+      //   text-align: center;
+      //   text-shadow: 1.674121379852295px 1.674121379852295px 12.55591106414795px rgba(0, 0, 0, 0.15);
+      //   line-height: 1em;
+      //   letter-spacing: -3.52px;
 
-        @media only screen and (max-width: 768px) {
-          font-size: 60px;
-        }
+      //   background: linear-gradient(180deg, #C0B7FF 5.47%, rgba(185, 200, 255, 0.30) 57.21%, rgba(181, 210, 255, 0.00) 89.93%);
+      //   background-clip: text;
+      //   -webkit-background-clip: text;
+      //   -webkit-text-fill-color: transparent;
+
+      //   margin: 0 auto 29px;
+
+      //   @media only screen and (max-width: 768px) {
+      //     font-size: 60px;
+      //   }
+      // }
+
+      img {
+        display: block;
+        object-fit: cover;
+        width: 100%;
       }
 
       p {
-        color: $whiteColor;
+        // color: $whiteColor;
+        // font-family: $primaryFontFamily;
+        // font-size: 20px;
+        // font-style: normal;
+        // font-weight: 600;
+        // text-align: center;
+        // line-height: 1.1em;
+
+        color: #FFF;
         font-family: $primaryFontFamily;
-        font-size: 20px;
+        font-size: 32px;
         font-style: normal;
-        font-weight: 600;
         text-align: center;
-        line-height: 1.1em;
+        font-weight: 600;
+        line-height: 100%;
+        margin-top: 46px;
+
+        @media only screen and (max-width: 768px) {
+          font-size: 27px;
+        }
+        
+        @media only screen and (max-width: 480px) {
+          font-size: 19px;
+        }
       }
 
       &:hover {
