refactor banner and after life section

--- a/sections/page-about-us.liquid
+++ b/sections/page-about-us.liquid
@@ -1,5 +1,209 @@
 <div class="db-page db-page--about-us">
 
+  <section class="db-section db-section--about-us-banner-after-life-faction">
+
+    <div class="about-us--banner">
+      <div class="db-container">
+        <div class="title-wrap">
+
+          <h1>
+            <span>
+              HELL YEAH
+            </span>
+
+            <span>
+              WE ARE
+            </span>
+          </h1>
+
+          <h4>
+            Welcome to the world of deadbeat, Deadbeat is a transmedia story centered around a radio station in the year 2069, where the undead rule the world.
+          </h4>
+
+        </div>
+
+        <div class="db-row">
+          <div class="db-col-spacer">
+            <div class="db-col">
+              <div class="db-logo-container">
+
+                <img class="db-img"
+                  alt="Deadbeats Logo"
+                  title="Deadbeats Logo"
+                  src="{{ 'About-Us__asset-DB-logo.png' | asset_url }}"
+                  width=""
+                  height=""
+                  loading="lazy"
+                />
+
+              </div>
+            </div>
+
+            <div class="db-col">
+
+              <div class="db-banner-its-year">
+                IT’S YEAR
+              </div>
+              <div class="db-banner-content-block">
+                <div class="db-banner-2069">
+                  2069
+                </div>
+                <div class="db-banner-and">
+                  <span>
+                    A
+                  </span>
+                  <span>
+                    N
+                  </span>
+                  <span>
+                    D
+                  </span>
+                </div>
+                <div class="db-banner-rock-the-world">
+                  Undead rock the world
+                </div>
+              </div>
+              <div class="db-banner-featured">
+                <div class="db-banner-featured-item">
+                  <div class="featured-item-content">
+                    <div class="featured-item-title">
+                      MARKETPLACE
+                    </div>
+                    <div class="featured-item-description">
+                      Lorem ipsum dolor sit amet consec
+                    </div>
+                  </div>
+                  <div class="featured-item-image">
+                    <img class="db-img"
+                      alt=""
+                      title=""
+                      src="{{ 'About-Us__asset-featured-ds-v02.png' | asset_url }}"
+                      width=""
+                      height=""
+                      loading="lazy"/>
+                    <img class="db-img"
+                      alt=""
+                      title=""
+                      src="{{ 'About-Us__asset-featured-mb-v02.png' | asset_url }}"
+                      width=""
+                      height=""
+                      loading="lazy"/>
+                  </div>
+                </div>
+                <div class="db-banner-featured-item">
+                  <div class="featured-item-content">
+                    <div class="featured-item-title">
+                      NFT COLLECTIONS
+                    </div>
+                    <div class="featured-item-description">
+                      Lorem ipsum dolor sit amet consec
+                    </div>
+                  </div>
+                  <div class="featured-item-image">
+                    <img class="db-img"
+                      alt=""
+                      title=""
+                      src="{{ 'About-Us__asset-featured-ds-v02.png' | asset_url }}"
+                      width=""
+                      height=""
+                      loading="lazy"/>
+                    <img class="db-img"
+                      alt=""
+                      title=""
+                      src="{{ 'About-Us__asset-featured-mb-v02.png' | asset_url }}"
+                      width=""
+                      height=""
+                      loading="lazy"/>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="about-us--after-life">
+      <div class="db-container">
+        <div class="db-row">
+          <h2>
+            THE AFTER, AFTER LIFE
+          </h2>
+        </div>
+
+        <div class="db-row">
+          <div class="db-col">
+              Welcome to BEAT 96.9, a once great independent radio station struggling to stay alive in the world of the undead. This new animated world follows the lives of the stations’ reimagined crew as they manage their post-apocalyptic lives.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="about-us--faction">
+      <div class="db-container">
+        <div class="db-row">
+          <div class="db-col">
+            <h3>
+              <span>
+                CHOOSE YOUR
+              </span>
+
+              <span>
+                FACTION
+              </span>
+            </h3>
+          </div>
+
+          <div class="db-col">
+            The streets of Old Columbus are no longer ruled by a government, rather 7 powerful gangs fight for control of the city. Pick the faction of your choice and begin your journey to rise through the ranks and become known as the most powerful faction in Old Columbus.
+            <br />
+            <br />
+            They are waiting on you to help lead them to victory.
+          </div>
+        </div>
+
+        <div class="db-row">
+          <div class="db-col">
+            <div class="db-inner-row">
+                <div class="db-inner-col">
+                  THE KINGS
+                </div>
+
+                <db class="db-inner-col">
+                  Are the total opposite of their old rivals, preferring to work in guerilla tactics rather than charging right in. They make deals and play politics with the other gangs to get upper hands. They’re sneaky, crafty, and planning.
+                </db>
+              
+            </div>
+
+            <div class="db-inner-row">
+              <div class="db-inner-col">
+                HQ: The Arena - The old football stadium and surrounding area is under the control of The Kings. It is quite possibly the most impenetrable fortress, anyone who controls this has the best staging area for both attacking and defending. The Hearts used to control the stadium area until The Kings got them with a surprise attack, taking it all in a single afternoon. Music plays from the stadium’s sound system with no breaks. This has put it on 92.9’s agenda, the desire to play their radio station through those speakers is a great one..
+              </div>
+            </div>
+
+            <div class="db-inner-row">
+              <div class="db-inner-col">
+                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" viewBox="0 0 12 20" fill="none" class="db-svg">
+                  <path d="M0 10C0 10.4969 0.248704 10.9938 0.497409 11.2422L8.70466 19.441C9.45078 20.1863 10.6943 20.1863 11.4404 19.441C12.1865 18.6957 12.1865 17.4534 11.4404 16.7081L4.72539 10L11.4404 3.29193C12.1865 2.54659 12.1865 1.30435 11.4404 0.559006C10.6943 -0.186337 9.45078 -0.186337 8.70466 0.559006L0.746114 8.50932C0.248705 9.00621 0 9.50311 0 10Z" fill="#CAC7D0" fill-opacity="0.4"/>
+                </svg>
+
+                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" viewBox="0 0 12 20" fill="none" class="db-svg">
+                  <path d="M12 10C12 10.4969 11.7513 10.9938 11.5026 11.2422L3.29534 19.441C2.54922 20.1863 1.3057 20.1863 0.559586 19.441C-0.186529 18.6957 -0.186529 17.4534 0.559586 16.7081L7.27461 10L0.559586 3.29193C-0.186529 2.54659 -0.186529 1.30435 0.559586 0.559006C1.3057 -0.186337 2.54922 -0.186337 3.29534 0.559006L11.2539 8.50932C11.7513 9.00621 12 9.50311 12 10Z" fill="#AA27B1"/>
+                </svg>
+                
+              </div>
+            </div>
+          </div>
+
+          <div class="db-col">
+            {% comment %} For Slider {% endcomment %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="db-section db-section--about-us-banner">
     <div class="db-container">
       <div class="title-wrap">
